@@ -1,6 +1,8 @@
 2002-08-22  Mark Salter  <msalter@redhat.com>
 
 	* src/net/net_io.c (net_io_putc): Don't flush on every \n.
+	* src/syscall.c (__do_syscall): Allow fileio support to fall back
+	to non-fileio behavior if program is not being run by gdb.
 
 2002-08-20  Thomas Koeller  <thomas@koeller.dyndns.org>
 
